tests/golden/runtime/endpoint_err.stderr
error[endpoint]: unhandled err reached main: "division by zero"
  born in main at endpoint_err.kso:1
