tests/golden/runtime/endpoint_err.kso
main = 10 / 0
